# Yale-OpenHand-Workshop-2018

./: .gitignore  README.md
Python-2.7/: lib_robotis_mod.py  openhand.py  test_sequence.py
Python-3.6/: lib_robotis_mod.py  openhand.py  test_sequence.py
ROS/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ROS/devel/include/common_msgs_gl/: GetBool.h  GetBoolArray.h  GetBoolArrayRequest.h  GetBoolArrayResponse.h  GetBoolRequest.h  GetBoolResponse.h  GetDouble.h  GetDoubleArray.h  GetDoubleArrayRequest.h  GetDoubleArrayResponse.h  GetDoubleRequest.h  GetDoubleResponse.h  GetInt.h  GetIntRequest.h  GetIntResponse.h  GetString.h  GetStringRequest.h  GetStringResponse.h  PointArray.h  PointArray3D.h  SendBool.h  SendBoolRequest.h  SendBoolResponse.h  SendDouble.h  SendDoubleArray.h  SendDoubleArrayReceiveDouble.h  SendDoubleArrayReceiveDoubleArray.h  SendDoubleArrayReceiveDoubleArrayRequest.h  SendDoubleArrayReceiveDoubleArrayResponse.h  SendDoubleArrayReceiveDoubleRequest.h  SendDoubleArrayReceiveDoubleResponse.h  SendDoubleArrayReceiveInt.h  SendDoubleArrayReceiveIntDouble.h  SendDoubleArrayReceiveIntDoubleRequest.h  SendDoubleArrayReceiveIntDoubleResponse.h  SendDoubleArrayReceiveIntRequest.h  SendDoubleArrayReceiveIntResponse.h  SendDoubleArrayRequest.h  SendDoubleArrayResponse.h  SendDoubleRequest.h  (+22 more)
ROS/devel/include/gripper_nodes/: CommandTrajectory.h  CommandTrajectoryRequest.h  CommandTrajectoryResponse.h
ROS/devel/include/openhand/: HoldServos.h  HoldServosRequest.h  HoldServosResponse.h  MoveServos.h  MoveServosRequest.h  MoveServosResponse.h  ReadCurrent.h  ReadCurrentRequest.h  ReadCurrentResponse.h  ReadLoad.h  ReadLoadRequest.h  ReadLoadResponse.h  ReadServos.h  ReadServosRequest.h  ReadServosResponse.h  ReadTemperature.h  ReadTemperatureRequest.h  ReadTemperatureResponse.h
ROS/devel/share/common-lisp/ros/common_msgs_gl/msg/: PointArray.lisp  PointArray3D.lisp  _package.lisp  _package_PointArray.lisp  _package_PointArray3D.lisp  common_msgs_gl-msg.asd
ROS/devel/share/common-lisp/ros/common_msgs_gl/srv/: GetBool.lisp  GetBoolArray.lisp  GetDouble.lisp  GetDoubleArray.lisp  GetInt.lisp  GetString.lisp  SendBool.lisp  SendDouble.lisp  SendDoubleArray.lisp  SendDoubleArrayReceiveDouble.lisp  SendDoubleArrayReceiveDoubleArray.lisp  SendDoubleArrayReceiveInt.lisp  SendDoubleArrayReceiveIntDouble.lisp  SendInt.lisp  SendIntArray.lisp  SendPointArray.lisp  SendString.lisp  SetOrientation.lisp  SetPose.lisp  SetPosition.lisp  _package.lisp  _package_SendDoubleArray.lisp  _package_SendDoubleArrayReceiveDoubleArray.lisp  _package_SendDoubleArrayReceiveIntDouble.lisp  _package_SendPointArray.lisp  _package_SetOrientation.lisp  _package_SetPose.lisp  _package_SetPosition.lisp  common_msgs_gl-srv.asd
ROS/devel/share/common-lisp/ros/gripper_nodes/srv/: CommandTrajectory.lisp  _package.lisp  _package_CommandTrajectory.lisp  gripper_nodes-srv.asd
ROS/devel/share/common-lisp/ros/openhand/srv/: HoldServos.lisp  MoveServos.lisp  ReadCurrent.lisp  ReadLoad.lisp  ReadServos.lisp  ReadTemperature.lisp  _package.lisp  _package_HoldServos.lisp  _package_MoveServos.lisp  _package_ReadCurrent.lisp  _package_ReadLoad.lisp  _package_ReadServos.lisp  _package_ReadTemperature.lisp  openhand-srv.asd
ROS/devel/share/common_msgs_gl/cmake/: common_msgs_gl-msg-extras.cmake  common_msgs_gl-msg-paths.cmake  common_msgs_glConfig.cmake
ROS/devel/share/dexterous_manipulation/cmake/: dexterous_manipulationConfig.cmake
ROS/devel/share/dynamixel_motors/cmake/: dynamixel_motorsConfig.cmake
ROS/devel/share/gripper_nodes/cmake/: gripper_nodes-msg-extras.cmake  gripper_nodes-msg-paths.cmake  gripper_nodesConfig.cmake
ROS/devel/share/keyboard_control/cmake/: keyboard_controlConfig.cmake
ROS/devel/share/keyboard_input/cmake/: keyboard_inputConfig.cmake
ROS/devel/share/openhand/cmake/: openhand-msg-extras.cmake  openhand-msg-paths.cmake  openhandConfig.cmake
ROS/devel/share/roseus/ros/common_msgs_gl/: manifest.l
ROS/devel/share/roseus/ros/gripper_nodes/: manifest.l
ROS/devel/share/roseus/ros/openhand/: manifest.l
ROS/src/: keyboard_control.launch
ROS/src/actuators/dynamixel_motors/: CMakeLists.txt  package.xml
ROS/src/actuators/dynamixel_motors/include/dynamixel_motors/: dyn_xm_control_table.h  dyn_xm_motor.hpp  dynamixel_motor.hpp  dynamixel_node.hpp
ROS/src/actuators/dynamixel_motors/src/: dyn_xm_motor.cpp  dynamixel_node.cpp
ROS/src/common/common_msgs_gl/: CMakeLists.txt  package.xml
ROS/src/common/common_msgs_gl/srv/: SendDoubleArray.srv
ROS/src/common/keyboard_input/: CMakeLists.txt  package.xml
ROS/src/common/keyboard_input/include/keyboard_input/: input_coding.hpp  keyboard.hpp
ROS/src/common/keyboard_input/src/: keyboard.cpp  main_keyboard.cpp
ROS/src/control/keyboard_control/: CMakeLists.txt  package.xml
ROS/src/control/keyboard_control/include/keyboard_control/: keyboard_control.hpp
ROS/src/control/keyboard_control/src/: keyboard_control.cpp  main_keyboard_control.cpp
ROS/src/gripper_nodes/: CMakeLists.txt  package.xml
ROS/src/gripper_nodes/include/gripper_nodes/: gripper.hpp
ROS/src/gripper_nodes/launch/: model_t42_node.launch
ROS/src/gripper_nodes/src/: gripper.cpp  gripper_node.cpp  main_dynamixel_node.cpp
ROS/src/gripper_nodes/srv/: CommandTrajectory.srv
ROS/src/openhand/: CMakeLists.txt  package.xml  setup.py
ROS/src/openhand/nodes/: openhandNode.py
ROS/src/openhand/src/openhand/: __init__.py  dynamixelhandkontrol.py  hands.py  lib_robotis_mod.py  nanokontrol.py
ROS/src/openhand/srv/: TorqueServos.srv
ROS/src/projects/dexterous_manipulation/: CMakeLists.txt  package.xml
ROS/src/projects/dexterous_manipulation/include/dexterous_manipulation/: inhand_manipulation_manager.hpp  keyboard.hpp
ROS/src/projects/dexterous_manipulation/launch/: model_t42.launch
ROS/src/projects/dexterous_manipulation/param/: gripper.yaml  keyboard.yaml  model_t42.yaml
ROS/src/projects/dexterous_manipulation/src/: .ml_preprocessor.cpp.swo  inhand_manipulation_manager.cpp  keyboard.cpp  main.cpp  main_keyboard.cpp
(+62 files in other folders)
