<?xml version="1.0"?>
<package>
  <name>openhand</name>
  <version>0.0.0</version>
  <description>The openhand package (python) for openhand control</description>

  <license> AS IS </license>

  <maintainer email="yalegrablab@gmail.com">yalgrablab</maintainer>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>


</package>
