<?xml version="1.0"?>
<package>
  <name>dynamixel_motors</name>
  <version>1.0.0</version>
  <description>The dynamixel_motors package</description>

  <maintainer email="yalegrablab@gmail.com">yalegrablab</maintainer>

  <license>AS IS</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>roscpp</run_depend>

</package>
