<?xml version="1.0"?>
<package>
  <name>common_msgs_gl</name>
  <version>1.0.0</version>
  <description>The common_msgs package</description>
  <maintainer email="yalegrablab@gmail.com">yalegrablab</maintainer>
  <license>AS IS</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <run_depend>message_runtime</run_depend>

</package>
