<?xml version="1.0"?>
<package>
  <name>keyboard_input</name>
  <version>0.0.0</version>
  <description>The keyboard_input package</description>

  <maintainer email="yalegrablab@gmail.com">yalegrablab</maintainer>

  <license>AS IS</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
