<?xml version="1.0"?>
<package>
  <name>keyboard_control</name>
  <version>0.0.0</version>
  <description>The keyboard_control package</description>

  <maintainer email="yalegrablab@gmail.com">yalegrablab</maintainer>

  <license>AS IS</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>keyboard_input</build_depend>
  <build_depend>common_msgs_gl</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>keyboard_input</run_depend>
  <run_depend>common_msgs_gl</run_depend>

</package>
