<?xml version="1.0"?>
<package>
  <name>dexterous_manipulation</name>
  <version>1.0.0</version>
  <description>The dexterous_manipulation package</description>
  <maintainer email="yalegrablab@gmail.com">yalegrablab</maintainer>
  <license>AS IS</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>common_msgs_gl</build_depend>
  <build_depend>gripper_nodes</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>common_msgs_gl</run_depend>
  <run_depend>gripper_nodes</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
